[tool.poetry]
name = "artux"
version = "0.1.0"
description = "A simple real-time CPU Temperature tracker for Unix-based systems."
authors = ["bazgab <gabrielbzzt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
artux = "artux.main:main"